# EBT_films_dose

./: .gitignore  Axes.py  AxesWindow.py  Curve.py  CurveWindow.py  DB_and_settings.py  DatabaseAndSettings.py  Dose.py  DoseClass.py  DosesAndPaths.py  EBT3Jana.py  FileDialog.py  Form.py  GraphicsPlotting.py  IsAdmin.py  LICENSE  MoveGraphLine.py  README.md  SaveLoadData.py  TODO  Values.py  ValuesWindow.py  Warnings.py  bd_method_settings.json  calibrate.json  calibrate_and_empty.json  calibrate_list.json  calibrate_list.py  calibrate_list2.json  cals_dose_logic.py  db_config.ini  doses_and_pathes.py  filters.py  logicParser.py  logicStats.py  model.json  pyproject.toml  requirements.txt  splash_screen.py  test.json  (+1 more)
database/: __init__.py  dbProxy.py  db_connection.py  directoryAdder.py  inputCurves1.py  mongotest.py  parseCurveToPopt.py  removeDuplicatedByLotID.py
neural/: checkKeras.py  checkPyBrain1.py  checkScikitLearn.py
stats/: logicStats.py  stats_ui.py
ui/: DB_and_settings.py  __init__.py  calibrate_list.py
unittests/: filter1.py  logicStatsTest.py  logicTime.py  testShelves1.py  twoDimGauss.py
