[tool.poetry]
name = "doseevt"
version = "0.1.0"
description = "Dose calculation and analysis tool"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<=3.10.11"
numpy = "~1.21.0"
pandas = "~1.5.0"
matplotlib = "~3.5.0"
scipy = "~1.7.0"
pillow = "~9.0.0"
PyQt5 = "5.15.9"
pymongo = "^4.0.0"
tifffile = "^2025.3.30"
scikit-learn = "^1.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 